Bug 1460996: Ensure the bootstrap process is always working with an argv[0] containing an absolute path; r=mhowell